--- a/source/_patterns/02-molecules/blocks/list-group/_list-group.scss
+++ b/source/_patterns/02-molecules/blocks/list-group/_list-group.scss
@@ -19,5 +19,5 @@
 }
 
 .jcc-list-item p strong {
-  @include responsive-lead();
+  @include t-intro();
 }
